Fixed heading overflow

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,6 +44,10 @@ img {
 	height: auto;
 }
 
+.jumbotron h1 {
+	overflow: hidden;
+}
+
 .container {
 	min-height: 100%;
 }
